feat: Setup base implementation for both apps
